ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
  - port: 80
    targetPort: 3000
